RESOLVED FIXED67517
Assertion/crash when running netscape-plugin-property-access-exception.html test
https://bugs.webkit.org/show_bug.cgi?id=67517
Summary Assertion/crash when running netscape-plugin-property-access-exception.html test
Anders Carlsson
Reported 2011-09-02 12:16:14 PDT
Assertion/crash when running netscape-plugin-property-access-exception.html test
Attachments
Patch (1.37 KB, patch)
2011-09-02 12:17 PDT, Anders Carlsson
aroben: review+
Anders Carlsson
Comment 1 2011-09-02 12:17:23 PDT
Anders Carlsson
Comment 2 2011-09-02 12:18:38 PDT
Note You need to log in before you can comment on or make changes to this bug.