Assertion/crash when running netscape-plugin-property-access-exception.html test https://bugs.webkit.org/show_bug.cgi?id=67517

Reviewed by Adam Roben.

Make sure to initialize the NPVariant in case the plug-in returns true from NP_GetProperty,
but doesn't set the result NPVariant to anything.

* Shared/Plugins/NPObjectMessageReceiver.cpp:
(WebKit::NPObjectMessageReceiver::getProperty):


Canonical link: https://commits.webkit.org/83347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94438 268f45cc-cd09-0410-ab3c-d52691b4dbfc